More doc and cleanup